task(env): Sensitive data now available in .env file

--- a/ios/MoodleMobile/Info.plist
+++ b/ios/MoodleMobile/Info.plist
@@ -12,9 +12,7 @@
 		<string>Roboto-Italic.ttf</string>
 		<string>Roboto-Light.ttf</string>
 		<string>Roboto-LightItalic.ttf</string>
-		<string>Roboto-Medium.ttf
-Roboto-Medium.ttf
-</string>
+		<string>Roboto-Medium.ttf</string>
 		<string>Roboto-MediumItalic.ttf</string>
 		<string>Roboto-Regular.ttf</string>
 		<string>Roboto-Thin.ttf</string>
