--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'MoodleMobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'MoodleMobileTests' do
     inherit! :search_paths
     # Pods for testing
