--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.6.0",
+    "react-native-progress": "^4.0.3",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
