--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.12.0"
   },
