--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/material-bottom-tabs": "^5.1.6",
+    "@react-navigation/material-top-tabs": "^5.1.7",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
     "react": "16.9.0",
