--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.2.6",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-ui": "^1.30.1",
