feature(register/identityproviders): Getting oauth2 result

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,5 @@
 MOODLE_HOST=localhost
 MOODLE_SERVICE=moodle_mobile_app
 MOODLE_ADMIN_TOKEN=ADMIN TOKEN GOES HERE
+MOODLE_WSEXTSERVICE=local_mobile
+MOODLE_CUSTOMURLSCHEME=moodlemobile
