--- a/ios/MoodleMobile/Info.plist
+++ b/ios/MoodleMobile/Info.plist
@@ -54,6 +54,7 @@
 	<string></string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>MaterialCommunityIcons.ttf</string>
 		<string>MaterialIcons.ttf</string>
 		<string>Roboto-Black.ttf</string>
 		<string>Roboto-BlackItalic.ttf</string>
