--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'MoodleMobile' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'MoodleMobileTests' do
     inherit! :search_paths
     # Pods for testing
