--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-paper": "^3.6.0",
     "react-native-progress": "^4.0.3",
     "react-native-reanimated": "^1.7.1",
+    "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.2.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
