--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.6.0",
