--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.13.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.6.0",
