--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gifted-chat": "^0.13.0",
     "react-native-i18n": "^2.0.15",
     "react-native-inappbrowser-reborn": "^3.4.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.6.0",
     "react-native-progress": "^4.0.3",
@@ -32,6 +33,7 @@
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.2.1",
