--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-share')
+    implementation project(':rn-fetch-blob')
     implementation project(':react-native-webview')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
