--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-inappbrowser-reborn')
     implementation project(':react-native-share')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-webview')
