--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
     "moment": "^2.24.0",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react": "16.11.0",
+    "react-native": "0.62.0-rc.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
