--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/material-bottom-tabs": "^5.1.6",
     "@react-navigation/material-top-tabs": "^5.1.7",
@@ -19,7 +20,7 @@
     "@react-navigation/stack": "^5.2.6",
     "moment": "^2.24.0",
     "react": "16.11.0",
-    "react-native": "0.62.0-rc.5",
+    "react-native": "0.62.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
