--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
     "moment": "^2.24.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "16.13.1",
+    "react-native": "0.63.0-rc.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
