--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^5.2.6",
     "moment": "^2.24.0",
     "react": "16.13.1",
-    "react-native": "0.63.0-rc.1",
+    "react-native": "0.63.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
