--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
-    "@react-navigation/drawer": "^5.3.4",
-    "@react-navigation/material-bottom-tabs": "^5.1.6",
-    "@react-navigation/material-top-tabs": "^5.1.7",
-    "@react-navigation/native": "^5.1.3",
-    "@react-navigation/stack": "^5.2.6",
+    "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
+    "@react-navigation/material-top-tabs": "^5.3.13",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-collapsible": "^1.5.2",
@@ -37,7 +38,7 @@
     "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-webview": "^9.2.1",
+    "react-native-webview": "^11.2.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
