--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,11 @@ platform :ios, '10.0'
 target 'MoodleMobile' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
 
   target 'MoodleMobileTests' do
     inherit! :complete
@@ -16,18 +20,9 @@ target 'MoodleMobile' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
-end
-
-target 'MoodleMobile-tvOS' do
-  # Pods for MoodleMobile-tvOS
-
-  target 'MoodleMobile-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
+  # you should disable the next line.
+  # use_flipper!()
+  # post_install do |installer|
+  #   react_native_post_install(installer)
+  # end
 end
