--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@react-navigation/stack": "^5.14.2",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.1",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
     "react-native-collapsible": "^1.5.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -42,14 +42,14 @@
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@react-native-community/eslint-config": "^0.0.7",
-    "babel-jest": "^25.2.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.2.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
