--- a/package.json
+++ b/package.json
@@ -10,45 +10,45 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.8.1",
-    "@react-native-community/masked-view": "^0.1.7",
-    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
-    "@react-navigation/drawer": "^5.12.3",
-    "@react-navigation/material-bottom-tabs": "^5.3.13",
-    "@react-navigation/material-top-tabs": "^5.3.13",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
-    "moment": "^2.24.0",
-    "node-fetch": "^2.6.1",
+    "@react-native-community/async-storage": "1.8.1",
+    "@react-native-community/masked-view": "0.1.7",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
+    "@react-navigation/drawer": "5.12.3",
+    "@react-navigation/material-bottom-tabs": "5.3.13",
+    "@react-navigation/material-top-tabs": "5.3.13",
+    "@react-navigation/native": "5.9.2",
+    "@react-navigation/stack": "5.14.2",
+    "moment": "2.24.0",
+    "node-fetch": "2.6.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-collapsible": "^1.5.2",
-    "react-native-dotenv": "^0.2.0",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-gifted-chat": "^0.13.0",
-    "react-native-i18n": "^2.0.15",
-    "react-native-inappbrowser-reborn": "^3.4.0",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.7.1",
-    "react-native-render-html": "^4.2.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0",
-    "react-native-share": "^3.3.0",
-    "react-native-skeleton-placeholder": "^2.0.7",
-    "react-native-tab-view": "^2.13.0",
-    "react-native-vector-icons": "^6.6.0",
-    "react-native-webview": "^11.2.1",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native-collapsible": "1.5.2",
+    "react-native-dotenv": "0.2.0",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-gifted-chat": "0.13.0",
+    "react-native-i18n": "2.0.15",
+    "react-native-inappbrowser-reborn": "3.4.0",
+    "react-native-linear-gradient": "2.5.6",
+    "react-native-paper": "3.10.1",
+    "react-native-reanimated": "1.7.1",
+    "react-native-render-html": "4.2.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "2.4.0",
+    "react-native-share": "3.3.0",
+    "react-native-skeleton-placeholder": "2.0.7",
+    "react-native-tab-view": "2.13.0",
+    "react-native-vector-icons": "6.6.0",
+    "react-native-webview": "11.2.1",
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "@babel/core": "7.12.9",
+    "@babel/runtime": "7.12.5",
+    "@react-native-community/eslint-config": "2.0.0",
+    "babel-jest": "26.6.3",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.64.0",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
